# sticky

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.toml  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/sticky/: __init__.py  __main__.py
src/sticky/cli/: app.py
src/sticky/core/: classify.py  config.py  db.py  digest.py  embeddings.py  entities.py  models.py  scheduler.py  search.py  service.py
src/sticky/mcp/: __main__.py  server.py
src/sticky/tui/: __init__.py  app.py
src/sticky/tui/views/: __init__.py  about.py  command_palette.py  detail.py  digest_view.py  entities_view.py  home.py  review.py  search_view.py  settings.py  stats_view.py
src/sticky/tui/widgets/: __init__.py  capture_input.py  keybinding_legend.py  status_bar.py  thought_row.py
tests/: conftest.py  test_classify.py  test_cli.py  test_config.py  test_db.py  test_digest.py  test_embeddings.py  test_entities.py  test_integration.py  test_mcp.py  test_models.py  test_performance.py  test_search.py  test_service.py  test_tui.py
